--- a/data/css/style.scss
+++ b/data/css/style.scss
@@ -803,4 +803,168 @@ h4.section-title {
     content: url(../image/icons/chevron-up.svg); /* fa-chevron-up */
 }
 
+// #categories{
+//     width: 25%;
+// }
+
+.category-list{
+    list-style: none;
+    padding: 0;
+    margin: 0 0 50px 0;
+    width: 25%;
+    li{
+        &:first-child{
+            border-top: 1px solid #ccc;
+        }
+        margin: 5px 0;
+        padding: 10px 5px;
+        border-bottom: 1px solid #ccc;
+        img{
+            width: 24px;
+            height: 24px;
+            margin-right: 15px;
+        }
+        a{
+            color: #0b2a49;
+            font-weight: 600;
+            font-size: .8em;
+            text-transform: uppercase;
+            display: block;
+            transition: all .2s;
+            &:hover{
+                color: #e20001;
+            }
+        }
+        .active{
+            color: #e20001;
+            width: 100%;
+            position: relative;
+            &::after{
+                content: "";
+                position: absolute;
+                width: 18px;
+                height: 18px;
+                background-size: contain;
+                right: 5px;
+                background-repeat: no-repeat;
+                background-image: url(../image/icons/chevron-right1.svg);
+            }
+        }
+    }
+}
+
+.partners-main{
+    width: calc(75% - 40px);
+    margin-left: 40px;
+    position: relative;
+    h5{
+        img{
+            width: 50px;
+            margin-right: 10px;
+        }
+    }
+    h6{
+        a{
+            color: #0b2a49;
+            transition: all .2s;
+            &:hover{
+                color: #e20001;
+            }
+        }
+    }
+}
+.search-partner{
+    position: relative;
+    img{
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        width: 1.5em;
+    }
+    input{
+        width: 100%;
+        padding: 10px 10px 10px 45px;
+        border-radius: 0;
+        border: none;
+        background-color: #eeeeee;
+        outline: none;
+        
+    }
+}
+
+#searchResults{
+    position: absolute; 
+    background-color: #fff;
+    width: 100%;
+    z-index: 99;
+    margin: 10px 0;
+    ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        a{
+            display: block;
+            background-color: #fff;
+            padding: 10px 20px;
+            color: #0b2a49;
+            font-weight: 600;
+            margin: 2px 0;
+        }
+        img{
+            width: 40px;
+            height: 40px;
+            padding: 2px;
+            margin-right: 20px;
+            border: 1px solid #ccc;
+            border-radius: 50%;
+        }
+    }
+}
+
+#listOfPartners{
+    width: 100%;
+    z-index: 99;
+    margin: 10px 0;
+    ul{
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+        li{
+            margin: 4px;
+            width: calc(33.333333333% - 8px);
+            text-align: center;
+        }
+        a{
+            display: block;
+            background-color: #EEEEEE;
+            padding: 10px;
+            color: #0b2a49;
+            font-weight: 600;
+            transition: all .2s;
+            &:hover{
+                color: #e20001;
+                box-shadow: inset 0 0 4px 1px #ccc;
+            }
+        }
+        img{
+            width: 70px;
+            height: 70px;
+            padding: 2px;
+            margin: 10px;
+            border: 1px solid #ccc;
+            border-radius: 50%;
+        }
+    }
+}
+
+#map{
+    width: 100%;
+    height: 60vh;
+    min-height: 300px;
+}
+
 @import "media.scss";
