--- a/data/css/media.css
+++ b/data/css/media.css
@@ -98,6 +98,21 @@
     font-size: .9em;
     padding-right: 25px;
   }
+  .category-list li img {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+  }
+  .partners-main {
+    width: calc(70% - 25px);
+    margin-left: 25px;
+  }
+  .category-list {
+    width: 30%;
+  }
+  .category-list li a {
+    font-size: .7em;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -176,6 +191,13 @@
     width: -moz-max-content;
     width: max-content;
   }
+  #listOfPartners ul img {
+    width: 50px;
+    height: 50px;
+  }
+  #listOfPartners ul p {
+    font-size: .7em;
+  }
 }
 
 @media only screen and (max-width: 576px) {
@@ -187,6 +209,67 @@
   }
   .my-carousel img {
     height: 100%;
+  }
+  .application-btn img {
+    padding: 0;
+  }
+  .category-list li img {
+    margin: 5px auto;
+    width: 20px;
+    height: 20px;
+    display: block;
+  }
+  .partners-main {
+    width: 100%;
+    margin: 20px 0 0 0;
+    padding: 0 15px;
+  }
+  .partners-main h5 {
+    font-size: 1em;
+  }
+  .category-list {
+    width: 100%;
+    padding: 0 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    margin: 15px 0;
+    background-color: #fff;
+  }
+  .category-list li {
+    text-align: center;
+    border: 0.5px solid #eee;
+    margin: 0;
+    width: 33.333333%;
+    padding: 10px;
+  }
+  .category-list li a {
+    font-size: .6em;
+  }
+  .category-list li .active::after {
+    display: none;
+  }
+  .category-list li:first-child {
+    border: .5px solid #eee;
+  }
+  .categories-mobile .partners-main {
+    display: none;
+  }
+  .partners-list .category-list, .branch-item .category-list {
+    display: none;
+  }
+  #listOfPartners ul li {
+    width: calc(50% - 8px);
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .category-list li a {
+    font-size: .5em;
   }
 }
 
