--- a/data/css/style.scss
+++ b/data/css/style.scss
@@ -236,6 +236,7 @@ button {
         list-style: none;
         li {
             margin: 10px 0;
+            cursor: pointer;
             img {
                 margin-right: 5px;
             }
