--- a/data/css/style.scss
+++ b/data/css/style.scss
@@ -1,7 +1,11 @@
+*{
+    scroll-behavior: smooth;
+}
 body {
     background: #f9f9f9;
     font-family: "Gilroy";
     color: #0b2a49;
+    overflow-x: hidden;
 }
 
 a {
@@ -9,28 +13,6 @@ a {
 }
 button {
     outline: none !important;
-}
-.navbar {
-    background: #fff;
-    box-shadow: 0 4px 10px rgba($color: #000000, $alpha: 0.15);
-    z-index: 9999;
-    padding: 0;
-    .row {
-        width: 100%;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-    }
-    .logo {
-        max-width: 110px;
-    }
-
-    .navbar-brand {
-        // padding: 0;
-        margin: 0;
-    }
-    .active {
-        color: #e20001;
-    }
 }
 
 .application-btn {
@@ -71,6 +53,29 @@ button {
     }
     100% {
         box-shadow: 0 0 0 2.5rem rgba(255, 255, 255, 0);
+    }
+}
+
+.navbar {
+    background: #fff;
+    box-shadow: 0 4px 10px rgba($color: #000000, $alpha: 0.15);
+    z-index: 9999;
+    padding: 0;
+    .row {
+        width: 100%;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
+    .logo {
+        max-width: 110px;
+    }
+
+    .navbar-brand {
+        // padding: 0;
+        margin: 0;
+    }
+    .active {
+        color: #e20001;
     }
 }
 
@@ -130,12 +135,8 @@ button {
     }
 }
 
-#city {
-    cursor: pointer;
-    transition: all 0.2s;
-    &:hover {
-        color: #e20001;
-    }
+.dropdown-menu{
+    min-width: max-content;
 }
 
 .lang-btn {
@@ -148,49 +149,6 @@ button {
     }
 }
 
-.city-list {
-    display: none;
-    position: absolute;
-    z-index: 9999;
-    width: calc(100% - 30px);
-    background: #fff;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 40px 100px;
-    top: 100px;
-    h2 {
-        text-align: center;
-    }
-    button {
-        position: absolute;
-        right: 110px;
-        background: none;
-        border: none;
-        top: 35px;
-        font-size: 2em;
-    }
-    div {
-        margin-top: 30px;
-        display: flex;
-        flex-wrap: wrap;
-        box-sizing: border-box;
-    }
-    a {
-        margin: 20px;
-        color: #333;
-        transition: all 0.2s;
-        -webkit-transition: all 0.2s;
-        &:hover {
-            color: #e20001;
-        }
-    }
-    .active {
-        background: #e20001;
-        padding: 5px 10px;
-        text-align: center;
-        color: #fff !important;
-    }
-}
 
 .subnav {
     background: #e20001;
@@ -255,6 +213,62 @@ button {
         }
     }
 }
+
+
+#city {
+    cursor: pointer;
+    transition: all 0.2s;
+    &:hover {
+        color: #e20001;
+    }
+}
+
+
+
+.city-list {
+    display: none;
+    position: absolute;
+    z-index: 9999;
+    width: calc(100% - 30px);
+    background: #fff;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 40px 100px;
+    top: 100px;
+    h2 {
+        text-align: center;
+    }
+    button {
+        position: absolute;
+        right: 110px;
+        background: none;
+        border: none;
+        top: 35px;
+        font-size: 2em;
+    }
+    div {
+        margin-top: 30px;
+        display: flex;
+        flex-wrap: wrap;
+        box-sizing: border-box;
+    }
+    a {
+        margin: 20px;
+        color: #333;
+        transition: all 0.2s;
+        -webkit-transition: all 0.2s;
+        &:hover {
+            color: #e20001;
+        }
+    }
+    .active {
+        background: #e20001;
+        padding: 5px 10px;
+        text-align: center;
+        color: #fff !important;
+    }
+}
+
 
 .shares-list {
     margin-top: 20px;
@@ -964,8 +978,25 @@ h4.section-title {
 
 #map{
     width: 100%;
-    height: 60vh;
+    height: 85vh;
     min-height: 300px;
+    position: relative;
+    left: 0;
+    top: 0;
 }
+
+.map-call-btn{
+    border: 1px solid #e20001;
+    padding: 5px 20px;
+    color: #e20001;
+    background: none;
+    height: max-content;
+    transition: all .2s;
+    &:hover{
+        background: #e20001;
+        color: #fff;
+    }
+}
+
 
 @import "media.scss";
