--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -2,6 +2,10 @@
     .my-carousel{
         height: 70vh;
     }
+    .be-partner form .row{
+        margin: 0 -30px;
+    }
+    
 }
 
 
@@ -20,6 +24,12 @@
         .row{
             margin: 0;
         }
+    }
+    .be-partner .row{
+        margin: 0;
+    }
+    .be-partner form .row {
+        margin: 0 -15px;
     }
     .city-list{
         top: 0;
@@ -113,6 +123,14 @@
     }
     #listOfPartners ul li{
         width: calc(50% - 8px);
+    }
+
+    .radio-cards1 label{
+        width: calc(50% - 10px);
+    }
+
+    .be-partner .subtitle{
+        font-size: .9em;
     }
 }
 
@@ -267,7 +285,16 @@
             display: none;
         }
     }
-    
+    .be-partner .subtitle{
+        margin-top: 15px;
+    }
+    .input-group label{
+        font-size: .85em;
+    }
+    .input-group input:focus + label,
+    .input-group input:valid + label {
+        font-size: 13px;        
+    }
 }
 
 @media only screen and (max-width: 350px){
@@ -278,6 +305,14 @@
                 font-size: .5em;
             }
         }
+    }
+    .input-group label{
+        font-size: .75em;
+    }
+    .input-group input:focus + label,
+    .input-group input:valid + label {
+        font-size: 11px;   
+        top: -8px;     
     }
 }
 
