--- a/data/css/style.css
+++ b/data/css/style.css
@@ -1328,7 +1328,9 @@ h4.section-title::before {
   position: absolute;
   pointer-events: none;
   left: 15px;
-  top: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
@@ -1341,6 +1343,8 @@ h4.section-title::before {
 .input-group input:focus + label,
 .input-group input:valid + label {
   top: -10px;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
   font-size: 14px;
   color: #333;
   padding: 0 3px;
@@ -1444,6 +1448,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .logo-upload label:hover {
   color: #fff;
   background-color: #e20001;
+}
+
+.logo-upload span {
+  margin-left: 15px;
+  color: #e20001;
 }
 
 .captcha-text {
@@ -1788,7 +1797,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .input-group input:focus + label,
   .input-group input:valid + label {
     font-size: 11px;
-    top: -8px;
+    top: -7px;
+  }
+  .logo-upload {
+    text-align: center;
+  }
+  .logo-upload label {
+    width: 100%;
+    text-align: center;
+  }
+  #imgshow {
+    display: block;
+    margin: 20px auto;
   }
 }
 
