--- a/data/css/media.css
+++ b/data/css/media.css
@@ -293,6 +293,14 @@
   .input-group input:valid + label {
     font-size: 13px;
   }
+  .desktop-category-menu {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
+  .mobile-category-menu {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 350px) {
