--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -295,6 +295,12 @@
     .input-group input:valid + label {
         font-size: 13px;        
     }
+    .desktop-category-menu{
+        display: flex!important;
+    }
+    .mobile-category-menu{
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 350px){
